--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Session Tracker",
-  "short_name": "Session",
-  "description": "Track and manage work sessions with comments and photos",
+  "short_name": "Sessions",
+  "description": "Track and manage your sessions with pictures and comments",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
@@ -11,7 +11,7 @@
       "src": "vite.svg",
       "sizes": "192x192",
       "type": "image/svg+xml",
-      "purpose": "any"
+      "purpose": "any maskable"
     }
   ]
 }
